# ocaml-uri

./: .bazelrc  .gitignore  .obazlrc  BUILD.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzl
.obazl.d/: codept.args  codept.deps  dune.lua
.obazl.d/lua/: obazl.lua
.obazl.d/opam/local/: BOOTSTRAP.bzl  BUILD.bazel  opam.manifest
bzl/: user.bazelrc
bzl/tools/: wss
config/: BUILD.bazel
etc/: BUILD.bazel
lib/: BUILD.bazel
lib_re/: BUILD.bazel
lib_sexp/: BUILD.bazel
lib_test/: BUILD.bazel
