workspace( name = "ocaml-uri" )

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "sunlark",
    remote = "https://github.com/obazl/sunlark",
    branch = "dev",
)
load("@sunlark//:WORKSPACE.bzl", "cc_fetch_repos")
## cc_fetch_repos() fetches rules_foreign_cc, needed by sealark
cc_fetch_repos()

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies(
    # register_built_tools=False
)


# #############
# http_archive(
#     name = "bazel_skylib",
#     urls = [
#         "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.2/bazel-skylib-1.0.2.tar.gz",
#         "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.2/bazel-skylib-1.0.2.tar.gz",
#     ],
#     sha256 = "97e70364e9249702246c0e9444bccdc4b847bed1eb03c5a3ece4f83dfe6abc44",
# )
# load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
# bazel_skylib_workspace()

# all_content = """filegroup(name = "all", srcs = glob(["**"]), visibility = ["//visibility:public"])"""

# ######################################
# ###############  OCaml ###############
git_repository(
    name = "obazl_tools_obazl",
    remote = "https://github.com/obazl/tools_obazl",
    branch = "dev",
)

git_repository(
    name = "obazl_tools_opam",
    remote = "https://github.com/obazl/rules_opam",
    branch = "nocamlfind",
)

git_repository(
    name = "obazl_rules_ocaml",
    remote = "https://github.com/obazl/rules_ocaml",
    branch = "nocamlfind",
)

load("@obazl_tools_opam//opam:bootstrap.bzl",
     # opam_configure = "configure",
     opam_install = "install")
# load("//:WORKSPACE.bzl", "opam")
# opam_configure(opam = opam)

opam_install()

load("@obazl_rules_ocaml//ocaml:bootstrap.bzl",
     "ocaml_configure",
     "ocaml_repository")
     # "opam_configuration")

# load("@obazl_rules_ocaml//ocaml:rules.bzl",

ocaml_configure(
    ##FIXME: version for coq
)

# opam_configuration(
#     name = "opam",
#     switch = "4.09.0",
#     # packages = [
#     #     "zarith",
#     #     # "sexplib"
#     # ],
#     # build_files = {
#     #     "@//bzl/opam/sexplib:BUILD.bazel": "sexplib",
#     #     "@//bzl/opam/biniou:BUILD.bazel": "biniou"
#     # },
#     download = False,
#     hermetic = False
# )

# # obazl_configure()
# # load("@obazl//:WORKSPACE.bzl", "cc_fetch_repos")
# # cc_fetch_repos()

# # ocaml_configure( opam = opam, build = "coq-x.y.z" )

# ###############
# # http_archive(
# #     name = "rules_foreign_cc",
# #     url = "https://github.com/bazelbuild/rules_foreign_cc/archive/0.2.0.tar.gz",
# #     sha256 = "d54742ffbdc6924f222d2179f0e10e911c5c659c4ae74158e9fe827aad862ac6",
# #     strip_prefix = "rules_foreign_cc-0.2.0",
# # )

load("@obazl_tools_obazl//:WORKSPACE.bzl", obazl_fetch_repos="cc_fetch_repos")
obazl_fetch_repos()

# # must come after cc_fetch_repos
# load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")
# rules_foreign_cc_dependencies()

# ################
# # local_repository(
# #     name = "obazl_rules_coq",
# #     path = "/Users/gar/obazl/rules_coq"
# # )
# git_repository(
#     name = "obazl_rules_coq",
#     remote = "https://github.com/obazl/rules_coq",
#     branch = "dev",
# )

# load("@obazl_rules_coq//coq:bootstrap.bzl", "coq_configure")
# load("@obazl_rules_coq//coq:rules.bzl", "coq_repository")

# coq_configure()

#     sdk = CoqSdkConfig(
#         path = ".",
#         version = "8.12.0"
#     )
# )

################ C/C++ Rules ################
# load("//:WORKSPACE.bzl", "cc_fetch_rules")
# cc_fetch_rules()

# load("@rules_foreign_cc//:workspace_definitions.bzl", "rules_foreign_cc_dependencies")
# rules_foreign_cc_dependencies()

################################################################
####  TESTING obazl tool

# coq_repository(
#     name = "coq_equations",
#     # url  = "https://github.com/mattam82/Coq-Equations/archive/08.tar.gz",
#     url  = "https://github.com/mattam82/Coq-Equations/archive/083c0656171124fe3e37b0a2cb6346fb18d11745.tar.gz",
#     # urls = [
#     #     "https://github.com/mattam82/Coq-Equations/archive/083c0656171124fe3e37b0a2cb6346fb18d11745.tar.gz"
#     # ],
#     strip_prefix = "Coq-Equations-083c0656171124fe3e37b0a2cb6346fb18d11745",
#     sha256 = "5d36bacb519e06f69a0269a719e7d08c920ab3bd05c717c16b037e70e853aef1"
# )

# coq_repository(
#     name = "coq-simple-bio",
#     url  = "https://github.com/Lysxia/coq-simple-io/archive/f7536c629dd02883abb5a2d64865becafed3af5b.tar.gz",
#     sha256 = "607035def3828969aafc57f5d7ca1df69513189a1794252522c45e12d77fa7b1",
#     strip_prefix = "coq-simple-io-f7536c629dd02883abb5a2d64865becafed3af5b"
# )

# ocaml_repository(
#     name = "ocaml-containers",
#     url  = "https://github.com/c-cube/ocaml-containers/archive/739dd4412c1af1c170ecdc9b42f427eea89cba2a.tar.gz",
#     strip_prefix = "ocaml-containers-739dd4412c1af1c170ecdc9b42f427eea89cba2a",
#     sha256 = "557373f276eb0a24e9f7a118e15ad7230ec556cad36573400aabce33bdbb58c6"
# )

# ocaml_repository(
#     name = "ocaml-ctypes",
#     url  = "https://github.com/ocamllabs/ocaml-ctypes/archive/15c225ea4f3efd1936fb045494a6b1803f42f594.tar.gz",
#     strip_prefix = "ocaml-ctypes-15c225ea4f3efd1936fb045494a6b1803f42f594",
#     sha256 = "1bdc604275994690d986403330119099fb65611c3c3fb1519eec0aa36ae6f44b"
# )

