

load("@rules_ocaml//build:rules.bzl","ocaml_library",
    "ocaml_module",
    "ocaml_signature",
    "ocaml_null"
)

#############
ocaml_module(
    name   = "Uri",
    struct = "uri.ml",
    sig    = ":Uri_cmi",
    deps   = [
        "@angstrom//:angstrom",
        "@stringext//:stringext",
    ],
    visibility = ["//visibility:public"]
)

#############

ocaml_signature(
    name  = "Uri_cmi",
    src   = "uri.mli",
    deps   = [
        "@angstrom//:angstrom",
        "@stringext//:stringext",
    ]
)
