load(
    "@rules_ocaml//build:rules.bzl",
    "ocaml_library",
    "ocaml_module",
    "ocaml_signature",
    "ocaml_null"
)

package(default_visibility = ["//visibility:public"])

# #############
# ocaml_null(
#     name   = "src",
# )

#############
ocaml_module(
    name   = "Uri_legacy",
    struct = "uri_legacy.ml",
    sig    = ":Uri_legacy_cmi",
    deps   = [
        "@re//posix",
        "@stringext//:stringext",
    ]
)

#############
ocaml_signature(
    name  = "Uri_legacy_cmi",
    src   = "uri_legacy.mli",
    deps   = [
        "@re//posix",
        "@stringext//:stringext",
    ]
)

#############
ocaml_module(
    name   = "Uri_re",
    struct = "uri_re.ml",
    sig    = ":Uri_re_cmi",
    deps   = [
        "@re//posix",
        "@stringext//:stringext",
    ],
)

#############
ocaml_signature(
    name  = "Uri_re_cmi",
    src   = "uri_re.mli",
    deps   = [
        "@re//posix",
        "@stringext//:stringext",
    ]
)
